<resources>
    <string name="app_name">Tshogyen</string>
    <string name="user_email">User Email</string>
    <string name="user_name">User Name</string>
    <string name="username">AdminID</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name: </string>
    <string name="email">Email:</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember Me</string>
    <string name="enter_user_email">Enter User Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="update_candidates">Update Candidates</string>
    <string name="register_candidates">Register Candidates</string>
    <string name="logout">Logout</string>
    <string name="please_click_here_to_verify_email">Please Click Here To Verify Email</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="user_profile">User Profile</string>
    <string name="about">About</string>
    <string name="reset_password">Reset Password</string>
    <string name="log_out">Log Out</string>
    <string name="profilepic">profilePic</string>
    <string name="your_profile">Your Profile</string>
    <string name="user_id">User ID:</string>
    <string name="candidates">Candidates</string>
    <string name="manifesto">"Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.  Why do we use it? It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).  "</string>
    <string name="chief_councillor">Chief Councillor</string>
    <string name="dupety_chief_councillor">Dupety Chief Councillor</string>
    <string name="hostel_councillor">Hostel Councillor</string>
    <string name="title">TSHOGYEN</string>
    <string name="aboutapp">Tshogyen is a mobile voting application for the GCIT councillors voting.
    With the help of this application, the students and teachers can vote for their respective candidate.
    Only the staffs and students of GCIT can register and use this app . After logging into this application,
    the voter can view candidates, view their manifesto videos through a given link, view the result and
        log out of the application. The voting feature will be only available for an hour on a particular
        date. After logging into the app, the voter will automatically be logged out of the app
        if no action is performed by them. Every vote counts.

    </string>

</resources>