<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VoteActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/CCvote"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginStart="70dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="70dp"
            android:layout_marginRight="70dp"
            android:onClick="ccVote"
            android:text="@string/chief_councillor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            android:background="@drawable/yellowbtn"/>

        <Button
            android:id="@+id/vote"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginStart="70dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="70dp"
            android:layout_marginRight="70dp"
            android:text="@string/dupety_chief_councillor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CCvote"
            android:background="@drawable/yellowbtn"/>

        <Button
            android:id="@+id/HCvote"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginStart="70dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="33dp"
            android:layout_marginEnd="70dp"
            android:layout_marginRight="70dp"
            android:text="@string/hostel_councillor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vote"
            android:background="@drawable/yellowbtn"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>