<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="197dp"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/login"
            android:layout_marginTop="8dp"
            android:text="@string/login"
            style="@style/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <EditText
            android:id="@+id/loginID"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="50dp"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:drawablePadding="5dp"
            android:hint="@string/enter_user_email"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:background="@drawable/edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login" />

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="50dp"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:drawablePadding="5dp"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:background="@drawable/edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginID" />

        <CheckBox
            android:id="@+id/showpassword"
            android:layout_marginStart="120dp"
            android:layout_marginLeft="120dp"
            android:text="show password"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginPassword"
            app:layout_constraintVertical_bias="0.057"
            tools:ignore="MissingConstraints"
            style="@style/blueText"/>

        <Button
            android:id="@+id/gotoLogin"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="100dp"
            android:background="@drawable/yellowbtn"
            android:text="@string/login"
            style="@style/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginPassword" />

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_marginTop="8dp"
            android:text="@string/forgot_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gotoLogin"
            style="@style/blueText"/>

        <TextView
            android:id="@+id/register_text"
            android:layout_marginTop="24dp"
            android:text="Don't have an account? Register Here"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgotPassword"
            style="@style/blueText"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>